test_files/netlist_footer_cmp/valid/valid_case_08_a.net
V1 IN 0 5
R1 IN OUT 1k
RLOAD OUT 0 {RLOAD}
.step param RLOAD list 1k 2k 5k
.op
.backanno
.end
