test_files/netlist_footer_cmp/invalid/invalid_case_01_a.net
V1 IN 0 10
R1 IN OUT 5k
R2 OUT 0 1k
.tran 0 10m
.lib analog.lib
.backanno
.end
